src/root.css
@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

@keyframes background-pan {
	from {
		background-position: 0% center;
	}

	to {
		background-position: -200% center;
	}
}

.magic-text {
	animation: background-pan 3s linear infinite;
	background: linear-gradient(to right, #8b5cf6, #3b82f6, #6366f1, #8b5cf6);
	background-size: 200%;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	white-space: nowrap;
}

